[package]
name = "chill-mp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
figment = { version = "0.10.19", features = ["toml"] }
id3 = "1.13.1"
image = "0.24.9"
mpd = "0.1.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_toml = "0.0.1"
termsize = "0.1.6"
viuer = "0.7.1"
xdg = "2.5.2"
